--- a/manifest.v2.json
+++ b/manifest.v2.json
@@ -2,12 +2,13 @@
   "name": "PRO OC DZS",
   "version": "1.1.0",
   "author": "Lukáš Drahník <ldrahnik@gmail.com>",
-  "manifest_version": 3,
+  "manifest_version": 2,
   "description": "Rozšíření přidává užitečné funkce do modulu Pacienti COVID-19 a Žádanky testů COVID-19 za pomoci DZS registru",
   "background": {
-    "service_worker": "background/background.js"
+    "scripts": ["lib/crypto-js.min.js", "background/background.js"],
+    "persistent": true
   },
-  "action": {
+  "browser_action": {
     "default_popup": "popup/popup.html"
   },
   "content_scripts": [{
@@ -20,10 +21,8 @@
     "page": "options/options.html",
     "browser_style": true
   },
-  "host_permissions": [
-    "*://*.ksrzis.cz/*"
-  ],
   "permissions": [
+    "<all_urls>",
     "storage"
   ]
 }
